--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ text-decoration: none;
 color: #fff;
 margin: 0 20px;
 font-size: 18px;
-font-weight: 600;
+font-weight: 500;
 }
 
 #navbar > ul{
@@ -65,6 +65,14 @@ font-size: 20px;
 
 }
 
+.iconscon :hover{
+ 
+    cursor: pointer;
+    background-color: #FF4A57;
+
+}
+
+
 #horizontal{
 display: flex;
 gap: 20px;
@@ -99,9 +107,52 @@ margin-top: 20px;
 
 }
 
+.leftcon .sectiontitle + p{
+color: #DFDFDF;
+font-size: 25px;
+font-weight: 300;
+text
+
+}
 
 .rightcon img{
  margin-top: 200px;
+
+
+}
+
+.leftcon p + button{
+
+background-color: #1f2235;
+border: 2px solid #FF4A57;
+padding: 20px;
+margin-top: 30px;
+border-radius: 28px;
+width: 170px;
+height: 60px;
+}
+
+.leftcon button >span{
+color: white;
+font-size: 15px;
+font-weight: 500;
+
+
+}
+.leftcon p + button:hover{
+    cursor:pointer;
+    background-color: #FF4A57;
+}
+
+#yticon{
+
+margin-left: 30px;
+background-color: #FF4A57;
+border: 2px solid #FF4A57;
+padding: 20px;
+border-radius: 30px;
+height: 60px;
+width: 80px;
 
 
 }
