--- a/styles/styles.css
+++ b/styles/styles.css
@@ -218,10 +218,16 @@ padding: 40px;
 
 }
 
-#card:hover{
+#card:hover {
+    background-color:#FF4A57;
 
-background-color: #FF4A57;
+}
+
+#card:hover #cardicons{
 cursor: pointer;
+transform: rotateY(180deg);
+color: white;
+
 
 
 
@@ -230,16 +236,11 @@ cursor: pointer;
 #cardicons{
 color: #FF4A57;
 font-size: 40px;
-transition: transform 1s ease;
+transition: transform 1s ease , color 0.3s ease;;
 
 }
 
-#cardicons:hover{
 
-    transform: rotateY(180deg);
-    color: white;
-
-}
 .cardtitle{
 color: white;
 margin-top: 30px;
